Dev: placeholder frontend

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -14,56 +18,55 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@layer components {
+  .custom-drop-shadow {
+    filter: drop-shadow(0 0 5em #461566);
   }
-  a:hover {
-    color: #747bff;
+
+  .custom-popup-drop-shadow {
+    filter: drop-shadow(0 0 3em #461566);
   }
-  button {
-    background-color: #f9f9f9;
+
+  .custom-shape-divider-bottom-1688215812 {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+    filter: drop-shadow(0 0 2em #242424);
+  }
+
+  .custom-shape-divider-bottom-1688215812 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 200px;
+  }
+
+  .custom-shape-divider-bottom-1688215812 .shape-fill {
+    fill: #552B5C;
+  }
+
+  .testimonial {
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+  }
+
+  .testimonial-1 {
+    background: linear-gradient(30deg, rgba(68, 32, 153, 1), rgba(166, 57, 193, 1));
+  }
+
+  .testimonial-2 {
+    background: linear-gradient(30deg, rgba(146, 153, 32, 1), rgba(166, 57, 193, 1))
+  }
+
+  .testimonial-3 {
+    background: linear-gradient(75deg, rgba(153, 79, 32, 1), rgba(58, 60, 194, 1))
+  }
+
+  .testimonial-4 {
+    background: linear-gradient(75deg, #5bb830, #35a8bd, rgba(144,58,194,1))
   }
 }
